# mincANTS

./: ANTS.cmake  CMakeLists.txt  README.txt  nlfit_ants  notes.build
Documentation/: ANTSMethodologySummary.docx
Examples/: ANTS.cxx  ANTSConformalMapping.cxx  ANTSIntegrateVectorField.cxx  ANTSIntegrateVelocityField.cxx  ANTSJacobian.cxx  ANTSUseDeformationFieldToGetAffineTransform.cxx  ANTSUseLandmarkImagesToGetAffineTransform.cxx  Apocrita.cxx  Atropos.cxx  AtroposMin.cxx  AverageAffineTransform.cxx  AverageImages.cxx  AverageTensorImages.cxx  CMakeLists.txt  CheckTopology.cxx  ClusterImageStatistics.cxx  ComposeMultiTransform.cxx  ComputeSimilarityMetric.cxx  ConformalMapping.cxx  ConvertImagePixelType.cxx  ConvertScalarImageToRGB.cxx  ConvertToJpg.cxx  ConvertVectorFieldToVTK.cxx  CopyImageHeaderInformation.cxx  CreateDTICohort.cxx  CreateDisplacementField.cxx  CreateImage.cxx  CreateJacobianDeterminantImage.cxx  CreateWarpedGridImage.cxx  ExtractRegionFromImage.cxx  ExtractRegionFromImageByMask.cxx  GetMeshAndTopology.cxx  ImageCompare.cxx  ImageMath.cxx  ImageSetStatistics.cxx  KellyKapowski.cxx  KellySlater.cxx  LabelClustersUniquely.cxx  LabelOverlapMeasures.cxx  LaplacianThickness.cxx  (+41 more)
ImageRegistration/: ANTS_affine_registration.h  ANTS_affine_registration2.h  itkANTSAffine3DTransform.h  itkANTSAffine3DTransform.hxx  itkANTSAffine3DTransform.txx  itkANTSCenteredAffine2DTransform.h  itkANTSCenteredAffine2DTransform.hxx  itkANTSCenteredAffine2DTransform.txx  itkANTSImageRegistrationOptimizer.cxx  itkANTSImageRegistrationOptimizer.h  itkANTSImageTransformation.cxx  itkANTSImageTransformation.h  itkANTSLabeledPointSet.h  itkAvantsMutualInformationRegistrationFunction.cxx  itkAvantsMutualInformationRegistrationFunction.h  itkAvantsPDEDeformableRegistrationFunction.h  itkCrossCorrelationRegistrationFunction.cxx  itkCrossCorrelationRegistrationFunction.h  itkExpectationBasedPointSetRegistrationFunction.h  itkExpectationBasedPointSetRegistrationFunction.hxx  itkExpectationBasedPointSetRegistrationFunction.txx  itkJensenHavrdaCharvatTsallisLabeledPointSetMetric.h  itkJensenHavrdaCharvatTsallisLabeledPointSetMetric.hxx  itkJensenHavrdaCharvatTsallisPointSetMetric.h  itkJensenHavrdaCharvatTsallisPointSetMetric.hxx  itkJensenTsallisBSplineRegistrationFunction.h  itkJensenTsallisBSplineRegistrationFunction.hxx  itkPICSLAdvancedNormalizationToolKit.h  itkPICSLAdvancedNormalizationToolKit.hxx  itkPICSLAdvancedNormalizationToolKit.txx  itkProbabilisticRegistrationFunction.cxx  itkProbabilisticRegistrationFunction.h  itkSpatialMutualInformationRegistrationFunction.cxx  itkSpatialMutualInformationRegistrationFunction.h  itkSyNDemonsRegistrationFunction.cxx  itkSyNDemonsRegistrationFunction.h  itkVectorParameterizedNeighborhoodOperatorImageFilter.h  itkVectorParameterizedNeighborhoodOperatorImageFilter.hxx  itkVectorParameterizedNeighborhoodOperatorImageFilter.txx
ImageSegmentation/: antsAtroposSegmentationImageFilter.h  antsAtroposSegmentationImageFilter.hxx  antsAtroposSegmentationImageFilter.txx  antsBoxPlotQuantileListSampleFilter.hxx  antsBoxPlotQuantileListSampleFilter.txx  antsGaussianListSampleFunction.h  antsGaussianListSampleFunction.hxx  antsGaussianListSampleFunction.txx  antsGrubbsRosnerListSampleFilter.h  antsGrubbsRosnerListSampleFilter.hxx  antsGrubbsRosnerListSampleFilter.txx  antsHistogramParzenWindowsListSampleFunction.h  antsHistogramParzenWindowsListSampleFunction.hxx  antsHistogramParzenWindowsListSampleFunction.txx  antsJointHistogramParzenShapeAndOrientationListSampleFunction.h  antsJointHistogramParzenShapeAndOrientationListSampleFunction.hxx  antsJointHistogramParzenShapeAndOrientationListSampleFunction.txx  antsJointHistogramParzenWindowsListSampleFunction.h  antsJointHistogramParzenWindowsListSampleFunction.hxx  antsJointHistogramParzenWindowsListSampleFunction.txx  antsListSampleFunction.h  antsListSampleFunction.txx  antsListSampleToListSampleFilter.h  antsListSampleToListSampleFilter.hxx  antsLogEuclideanGaussianListSampleFunction.h  antsLogEuclideanGaussianListSampleFunction.txx  antsManifoldParzenWindowsListSampleFunction.h  antsManifoldParzenWindowsListSampleFunction.hxx  antsManifoldParzenWindowsListSampleFunction.txx  antsPartialVolumeGaussianListSampleFunction.h  antsPassThroughListSampleFilter.h  antsPassThroughListSampleFilter.hxx  itkAtroposSegmentationImageFilter.h  itkAtroposSegmentationImageFilter.txx  itkBoxPlotQuantileListSampleFilter.h  itkBoxPlotQuantileListSampleFilter.txx  itkGaussianListSampleFunction.h  itkGaussianListSampleFunction.txx  itkGrubbsRosnerListSampleFilter.h  itkGrubbsRosnerListSampleFilter.txx  (+10 more)
Scripts/: ANTSAverage2DAffine.sh  ANTSAverage3DAffine.sh  ANTSpexec.sh  ants.sh  antsIntroduction.sh  antsMultivariateTemplateConstruction.sh  antsTutorial.sh  antsaffine.sh  antsbashstats.sh  antsbrainsegmentation.sh  antsbxt.sh  antsdeformationmag.sh  antswithdt.sh  apocrita.sh  buildtemplate.sh  buildtemplateparallel.sh  directlabels.sh  geodesicinterpolation.sh  guidedregistration.sh  landmarkmatch.sh  (+7 more)
branches/library_with_executables/Examples/: ANTS.cxx  ANTSUseDeformationFieldToGetAffineTransform.cxx  ANTSUseLandmarkImagesToGetAffineTransform.cxx  AtroposMin.cxx  CMakeLists.txt  ComposeMultiTransform.cxx  ConformalMapping.cxx  ConvertImagePixelType.cxx  ConvertScalarImageToRGB.cxx  CopyImageHeaderInformation.cxx  CreateDTICohort.cxx  CreateImage.cxx  ExtractRegionFromImageByMask.cxx  ExtractSliceFromImage.cxx  GetMeshAndTopology.cxx  KellySlater.cxx  LabelGeometryMeasures.cxx  MeasureImageSimilarity.cxx  MeasureMinMaxMean.cxx  MemoryTest.cxx  MultiplyImages.cxx  SetOrigin.cxx  SmoothImage.cxx  ThresholdImage.cxx  WarpVTKPolyDataMultiTransform.cxx  antsApplyTransforms.cxx  antsRegistration.cxx  ants_moco.cxx  itkantsRegistrationHelper.hxx  sccan.cxx
branches/library_with_executables/Examples/include/: ANTSIntegrateVelocityField.h  AverageImages.h  ConformalMapping.h  CreateWarpedGridImage.h  MemoryTest.h  MultiplyImages.h  N3BiasFieldCorrection.h  SetDirectionByMatrix.h  SurfaceCurvature.h  antsImageRead.h  ants_moco.h
(+535 files in other folders)
